--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            buildConfigField "String", "SPOTIFY_CLIENT_ID", SPOTIFY_CLIENT_ID
+            buildConfigField "String", "SPOTIFY_REDIRECT_URI", SPOTIFY_REDIRECT_URI
+        }
+    }
+}
+
+repositories {
+    mavenCentral()
+    flatDir {
+        dirs 'libs'
     }
 }
 
@@ -24,4 +35,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+
+    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
+    compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
 }
