--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,20 +6,38 @@ android {
 
     defaultConfig {
         applicationId "ninja.bryansills.spotidemo"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "SPOTIFY_CLIENT_ID", SPOTIFY_CLIENT_ID
+        buildConfigField "String", "SPOTIFY_REDIRECT_URI", SPOTIFY_REDIRECT_URI
     }
+
+    signingConfigs {
+        release {
+            storeFile file(STORE_FILE)
+            storePassword STORE_PASSWORD
+            keyAlias KEY_ALIAS
+            keyPassword KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            buildConfigField "String", "SPOTIFY_CLIENT_ID", SPOTIFY_CLIENT_ID
-            buildConfigField "String", "SPOTIFY_REDIRECT_URI", SPOTIFY_REDIRECT_URI
+            signingConfig signingConfigs.release
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
@@ -31,11 +49,10 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:design:23.0.1'
-
-    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta10@aar'
-    compile 'com.spotify.sdk:spotify-player:1.0.0-beta10@aar'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.spotify.sdk:spotify-auth:1.0.0-beta12@aar'
+    compile 'com.spotify.sdk:spotify-player:1.0.0-beta12@aar'
 }
