Add basic album art in the toolbar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta12@aar'
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta12@aar'
     compile 'com.github.kaaes:spotify-web-api-android:0.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
